# energy-consumption-forecasting

./: .env.format  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd_airflow.yaml  cd_private_pypiserver.yaml  cd_web_application.yaml  test.yaml
app/: README.md  docker-compose.yaml  pyproject.toml  utils.py
app/backend/: Dockerfile  __main__.py  application.py  config.py  endpoint.py  schemas.py
app/frontend/: Dockerfile  components.py  main.py
app/monitoring/: .dockerignore  Dockerfile  components.py  main.py
artifacts/best_config-v2/: best_config.json
data/assets/hyperparameter/: best_config.json
data/processed_data/: dk_energy_consumption_v1_metadata.json
data/raw_data/: ConsumptionIndustry_metadata.json
energy_consumption_forecasting/: exception.py  exceptions.py  logger.py  utils.py
energy_consumption_forecasting/airflow/: Dockerfile  docker-compose.yaml
energy_consumption_forecasting/feature_pipeline/: data_extraction.py  data_loading.py  data_transformation.py  data_validation.py  etl_data_extraction.py  feature_pipeline.py  feature_view.py  main_feature_pipeline.py
energy_consumption_forecasting/inference_pipeline/: batch_data.py  inference_pipeline.py  monitor_performance.py  utils.py
energy_consumption_forecasting/training_pipeline/: data_preprocessing.py  hyperparameter_tuning.py  model_builder.py  training_pipeline.py  utils.py
notebooks/: 01_data_extraction.ipynb  02_data_cleaning_eda.ipynb
src/: exception.py  logger_script.py  utils.py
src/feature_pipeline/: data_extraction.py
(+14 files in other folders)
