[tool.poetry]
name = "app"
version = "0.1.0"
description = "A application for forecasting Denmarks energy consumption."
authors = ["John Pinto <66053973+JohnPPinto@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "2.1.4"
python-dotenv = "^1.0.1"
pydantic = "^2.6.0"
plotly = "^5.19.0"
gcsfs = "^2024.3.1"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
streamlit = "^1.32.2"
pydantic-settings = "^2.2.1"
yarl = "^1.9.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
